2007-06-05  Andreas Røsdal  <andreasr@gnome.org>

	* gnome_sudoku.py: Rearrage meny items to be more logically organized. 

2007-06-05  Andreas Røsdal  <andreasr@gnome.org>

	* gnome_sudoku.py: Disable saving and loading, because of all the 
	crashes reported to these features.

2007-06-05  Andreas Røsdal  <andreasr@gnome.org>

	* src/lib/gnome_sudoku.py:
	* src/lib/printing.py: Ensure that g_thread_init is called
	before all other GLib functions. This will prevent memory 
	corruption, crashes, leaks and/or unexpected aborts.

	Reported by Tom London:
	https://bugzilla.redhat.com/bugzilla/show_bug.cgi?id=241917

2007-05-20  Robert Ancell  <robert.ancell@gmail.com>

	* src/lib/gnome_sudoku.py: Set default icon for all windows (Bug #393250)
	* src/lib/defaults.py.in: Catch exceptions making data directory

2007-05-15  Andreas Røsdal  <andreasr@gnome.org>

	* src/lib/gnome_sudoku.py: 
	* help/C/gnome-sudoku.xml: Make the main menu consistent
	with the rest of gnome-games.Rename  "Game" -> "Tools" 
	and  "File" -> "Game" Patch from Thomas Andersen in Bug #408440.

2007-05-15  Andreas Røsdal  <andreasr@gnome.org>

	* src/lib/gnome_sudoku.py: Use Ctrl-H for hint. Patch from
	Thomas Andersen in Bug #420325.

2007-05-04  Andreas Røsdal  <andreasr@gnome.org>

	* src/lib/gsudoku.py: Make fill remove red color when it corrects a 
	mistake. The patch makes "fill" use the same code for changing a 
	number as when done manually. Patch from Thomas Andersen 
	in Bug #393253. 

2007-05-01  Andreas Røsdal  <andreasr@gnome.org>

	* src/lib/sudoku_generator_gui.py: Fix a i18n related crash,
	by strong the number of generated puzzles in a variable,
	instead of extracting it from the label. This solves Bug #428560.

2007-05-01  Andreas Røsdal  <andreasr@gnome.org>

	* src/lib/sudoku_maker.py: Fix a race condition which occurs
	when saving puzzles on exit. The solution is to run the pickle
	operation atomically. This solves Bug #409172 et al.
