@@ -1,5 +1,10 @@
 2007-06-05  Andreas Røsdal  <andreasr@gnome.org>
 
+	* gnome_sudoku.py: Remove the option for selecting black background
+	option (bug #395135). 
+
+2007-06-05  Andreas Røsdal  <andreasr@gnome.org>
+
 	* gnome_sudoku.py: Rearrage meny items to be more logically organized. 
 
 2007-06-05  Andreas Røsdal  <andreasr@gnome.org>
